--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ body, html {
 }
 
 .card:hover {
-  transform: perspective(800px) rotateX(-8deg) scale(1.05);
+  transform: perspective(800px) rotateY(8deg) scale(1.05);
   box-shadow: 0 0 30px rgba(255,255,255,0.3);
   border-radius: 30px;
 }
@@ -94,7 +94,7 @@ body, html {
 }
 
 .card.clicado img.perfil {
-  transform: rotate(15deg);
+  transform: rotate(-5deg);
   box-shadow: 0 0 25px rgba(255, 255, 255, 0.8);
 }
 
