--- a/style.css
+++ b/style.css
@@ -73,13 +73,13 @@ body, html {
 }
 
 .card:hover {
-  transform: perspective(800px) rotateY(-6deg) scale(1.05);
+  transform: perspective(800px) rotateY(-6deg) rotateX(-4deg) scale(1.05);
   box-shadow: 0 0 30px rgba(255,255,255,0.3);
   border-radius: 30px;
 }
 
 .card.clicado {
-  transform: perspective(800px) rotateY(-12deg) scale(1.08);
+  transform: perspective(800px) rotateY(-10deg) rotateX(-6deg) scale(1.08);
 }
 
 .card img.perfil {
@@ -94,7 +94,7 @@ body, html {
 }
 
 .card.clicado img.perfil {
-  transform: rotate(-5deg);
+  transform: rotate(-10deg);
   box-shadow: 0 0 25px rgba(255, 255, 255, 0.8);
 }
 
