--- a/style.css
+++ b/style.css
@@ -125,16 +125,15 @@ body, html {
   cursor: pointer;
   overflow: hidden;
   font-weight: 300;
+  margin-top: 6px;
 }
 
 .clique-texto::after {
-  content: "";
+  content: "____________________________";
   position: absolute;
   left: 0;
-  bottom: -3px;
-  width: 100%;
-  height: 1px;
-  background: #ccc;
+  bottom: -5px;
+  color: #ccc;
   transition: transform 0.4s ease;
   transform: translateX(0);
 }
@@ -142,19 +141,6 @@ body, html {
 .clique-texto.animado::after {
   transform: translateX(15%);
 }
-
-.corner {
-  position: absolute;
-  font-size: 12px;
-  color: #fff;
-  animation: piscarLuz 3s infinite ease-in-out;
-  text-shadow: 0 0 4px rgba(255,255,255,0.4);
-}
-
-.top-left    { top: 8px; left: 10px; }
-.top-right   { top: 8px; right: 10px; }
-.bottom-left { bottom: 8px; left: 10px; }
-.bottom-right{ bottom: 8px; right: 10px; }
 
 footer {
   margin-top: 20px;
@@ -168,12 +154,7 @@ footer {
   to   { opacity: 1; transform: translateY(0); }
 }
 
-@keyframes piscarLuz {
-  0%, 100% { text-shadow: 0 0 10px rgba(255,255,255,0.8); }
-  50%      { text-shadow: 0 0 25px rgba(255,255,255,1); }
-}
-
 @keyframes brilho {
   0%, 100% { text-shadow: 0 0 6px rgba(255,255,255,0.5); }
   50% { text-shadow: 0 0 14px rgba(255,255,255,1); }
-  }
+}
